# delta

./: .gitignore  AGENTS.md  Makefile  README.md  mvp.prompt.md  pyproject.toml
src/delta/: AGENTS.md  __init__.py  acp_server.py  cli.py  compliance.py  guidelines.py  llm.py  plan_widget.py  prompts.py  protocol.py  review.py  thinking_status.py  tools.py  utils.py  workflow.py  wrapper.py
tests/: __init__.py  test_acp_server.py  test_compliance.py  test_context_inference.py  test_guidelines.py  test_llm.py  test_llm_pool.py  test_prompts.py  test_protocol.py  test_review.py  test_simple_review_git.py  test_thinking_status.py  test_tools.py  test_utils.py  test_workflow.py
