[project]
name = "delta-ai"
version = "0.1.0"
description = "AI agent compliance wrapper that enforces AGENTS.md guidelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Delta Contributors" },
]
keywords = [
    "ai",
    "agent",
    "compliance",
    "llm",
    "acp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "agent-client-protocol>=0.1.0",
    "claude-agent-sdk>=0.1.18",
    "json-repair>=0.54.0",
]

[project.scripts]
delta = "delta.cli:main"

[project.urls]
Homepage = "https://github.com/emyller/delta"
Repository = "https://github.com/emyller/delta"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/delta"]

[tool.hatch.build.targets.wheel.force-include]
"src/delta/AGENTS.md" = "delta/AGENTS.md"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "PTH",
    "RUF",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
